Fix typo: 'premiun' to 'premium'

--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
     </ul>
   </nav>
   <main>
-    <h2>Premiun Quality T-Shirts-P199.00</h2>
+    <h2>Premium Quality T-Shirts-P199.00</h2>
     <div class="shop-section">
       <img src="img/tshirt2.png" alt="T-shirt">
       <img src="img/tshirt5.png" alt="T-shirt">
